--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Joseph Timmer.com</title>
+		<link rel="stylesheet" href="style1.css">
+	</head>
+	<body>
+		<h1>Hello World!</h1>
+		<p>My first webpage</p>
+
+	<a href="C:\Users\Josep\OneDrive\Documents\Education\Computer Science\JosephTimmer.com/My Second Webpage.html">
+		<button>My Second Webpage</button>
+	</a>
+
+      	<button onclick="changeColor()">Repaint!</button>
+	<a href="C:\Users\Josep\OneDrive\Documents\Education\Computer Science\JosephTimmer.com\Notes\Codecademy Notes.html">
+		<button>Codecademy Notes</button>
+  	</body>
+  
+      	<script>
+        	function getRandomColor(){
+          	let letters = '0123456789ABCDEF';
+          	let color = '#';
+          	for (let i = 0; i < 6; i++) {
+            	color += letters[Math.floor(Math.random() * 16)];
+          	}
+          	return color;
+        	}
+        	function changeColor(){
+          	let newColor = getRandomColor();
+          	document.body.style.backgroundColor = newColor;
+        	}
+    	</script>
 </html>
