--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</a>
 
       	<button onclick="changeColor()">Repaint!</button>
-	<a href="Codecademy Notes.html">
+	<a href="./Codecademy Notes.html">
 		<button>Codecademy Notes</button>
   	</body>
   
