Repaired link to home.

--- a/Notes/Codecademy Notes.html
+++ b/Notes/Codecademy Notes.html
@@ -90,7 +90,7 @@
 
 		</ol></p>
 
-	<a href="C:\Users\Josep\OneDrive\Documents\Education\Computer Science\JosephTimmer.com\Home\JosephTimmer.com.html">
+	<a href="index.html">
 		<button> Home</button>
 	</a>
 
