--- a/Notes/Codecademy Notes.html
+++ b/Notes/Codecademy Notes.html
@@ -89,6 +89,23 @@
 				</a></li>
 
 		</ol></p>
+		
+		<h2>Deploying Websites</h2>
+		<p><ol>
+			<li><a href=".\Deploying Websites\Command Line for Building Websites\Command Line for Building Websites.html">
+				<div>Command Line for Building Websites</div>
+				</a></li>
+			<li><a href="Page Addrerss">
+				<div>Display Text</div>
+				</a></li>
+			<li><a href="Page Addrerss">
+				<div>Display Text</div>
+				</a></li>
+			<li><a href="Page Addrerss">
+				<div>Display Text</div>
+				</a></li>
+		</ol></p>
+		
 
 	<a href="https://josephtimmer90.github.io/">
 		<button> Home</button>
