--- a/Notes/Codecademy Notes.html
+++ b/Notes/Codecademy Notes.html
@@ -64,7 +64,7 @@
 				<div>DISPLAY AND POSITIONING</div>
 				</a></li>
 
-			<li><a href="Page Addrerss">
+			<li><a href=".\CSS\Color\Color.html">
 				<div>Display Text</div>
 				</a></li>
 
