--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>Hello World!</h1>
 		<p>My first webpage</p>
 
-	<a href="C:\Users\Josep\OneDrive\Documents\Education\Computer Science\JosephTimmer.com/My Second Webpage.html">
+	<a href="./home/My Second Webpage.html">
 		<button>My Second Webpage</button>
 	</a>
 
