--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<h1>Hello World!</h1>
 		<p>My first webpage</p>
 
-	<a href="./home/My Second Webpage.html">
+	<a href="./JosephTimmer.com/Home/My Second Webpage.html">
 		<button>My Second Webpage</button>
 	</a>
 
       	<button onclick="changeColor()">Repaint!</button>
-	<a href="./Notes/Codecademy Notes.html">
+	<a href=".JosephTimmer.com/Notes/Codecademy Notes.html">
 		<button>Codecademy Notes</button>
   	</body>
   
