Remove resources folder from img tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <Div class="logo">
-            <img src="./Resources/Logo.jpg" alt="A cube made of cubes.">
+            <img src="./Logo.jpg" alt="A cube made of cubes.">
         </Div>
         <nav>
             <ul>
@@ -47,15 +47,15 @@
             </div>
             <div class="photos-of-what-we-do">
                 <figure class="powwd people-talking">
-                    <img src="./Resources/people talking.png" alt="People talking.">
+                    <img src="./people talking.png" alt="People talking.">
                     <figcaption>People talking.</figcaption>
                 </figure>
                 <figure class="powwd toasting-beer-glasses">
-                    <img src="./Resources/Toasting Glasses.png" alt="Two animated beer glasses toasting.">
+                    <img src="./Toasting Glasses.png" alt="Two animated beer glasses toasting.">
                     <figcaption>Two animated beer glasses toasting.</figcaption>
                 </figure>
                 <figure class="powwd people-petitioning">
-                    <img src="./Resources/people petitioning.png" alt="People Petitioning.">
+                    <img src="./people petitioning.png" alt="People Petitioning.">
                     <figcaption>People Petitioning.</figcaption>
                 </figure>
             </div>
@@ -77,22 +77,22 @@
         </div>
         <section class="photos" id="photos">
             <div class="dp1 div-photo">
-                <img class="p1" src="./Resources/Socalizing 1.jpg" alt="People Socializing">
+                <img class="p1" src="./Socalizing 1.jpg" alt="People Socializing">
             </div>
             <div class="dp2 div-photo">
-                <img class="p2" src="./Resources/Socalizing 2.jpg" alt="People Socializing">
+                <img class="p2" src="./Socalizing 2.jpg" alt="People Socializing">
             </div>
             <div class="dp3 div-photo">
-                <img class="p3" src="./Resources/socializing 3.jpg" alt="People Socializing">
+                <img class="p3" src="./socializing 3.jpg" alt="People Socializing">
             </div>
             <div class="dp4 div-photo">
-                <img class="p4" src="./Resources/socializing 4.jpg" alt="People Socializing">
+                <img class="p4" src="./socializing 4.jpg" alt="People Socializing">
             </div>
             <div class="dp5 div-photo">
-                <img class="p5" src="./Resources/socializing 5.jpg" alt="People Socializing">
+                <img class="p5" src="./socializing 5.jpg" alt="People Socializing">
             </div>
             <div class="dp6 div-photo">
-                <img class="p6" src="./Resources/Socializing 6.jpg" alt="People Socializing">
+                <img class="p6" src="./Socializing 6.jpg" alt="People Socializing">
             </div>
 
         </section>
@@ -130,7 +130,7 @@
     </main>
     <footer>
         <div class="logo2">
-            <img src="./Resources/Logo.jpg" alt="A cube made of cubes.">
+            <img src="./Logo.jpg" alt="A cube made of cubes.">
         </div>
         <nav class="nav2">
             <ul>
