--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             </ul>
         </nav>
         <div class="socials">
-            <img class="social-icon si-F" src="./Resources/F.png" alt="">
-            <img class="social-icon si-T" src="./Resources/T.png" alt="">
-            <img class="social-icon si-I" src="./Resources/I.png" alt="">
+            <img class="social-icon si-F" src="./F.png" alt="">
+            <img class="social-icon si-T" src="./T.png" alt="">
+            <img class="social-icon si-I" src="./I.png" alt="">
         </div>
 
     </footer>
