Capitalized People in People petitioning img in index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <figcaption>Two animated beer glasses toasting.</figcaption>
                 </figure>
                 <figure class="powwd people-petitioning">
-                    <img src="./people petitioning.png" alt="People Petitioning.">
+                    <img src="./People petitioning.png" alt="People Petitioning.">
                     <figcaption>People Petitioning.</figcaption>
                 </figure>
             </div>
